# swagger.json
@@ -677,6 +677,16 @@
             "type": "number",
             "description": "User's daily norm",
             "example": "2000"
+          },
+          "weight": {
+            "type": "number",
+            "description": "Upd User's weight",
+            "example": 70
+          },
+          "sportTime": {
+            "type": "number",
+            "description": "Upd User's activity hours",
+            "example": 3
           }
         },
         "example": {
@@ -684,7 +694,9 @@
           "email": "john.doe123@example.com",
           "gender": "Man",
           "avatarURL": "http://res.cloudinary.com/ddbqgch8e/image/upload/v1713198540/avatars/azjfryjytat5cpdh9ix5.webp",
-          "dailyWaterNorm": 2000
+          "dailyWaterNorm": 2000,
+          "weight": "70",
+          "sportTime": "3"
         }
       },
 
@@ -726,6 +738,16 @@
             "type": "number",
             "description": "Upd User's daily norm",
             "example": "3000"
+          },
+          "weight": {
+            "type": "number",
+            "description": "Upd User's weight",
+            "example": 70
+          },
+          "sportTime": {
+            "type": "number",
+            "description": "Upd User's activity hours",
+            "example": 3
           }
         }
       },
@@ -758,6 +780,16 @@
             "type": "number",
             "description": "User's daily norm",
             "example": "3000"
+          },
+          "weight": {
+            "type": "number",
+            "description": "Upd User's weight",
+            "example": 70
+          },
+          "sportTime": {
+            "type": "number",
+            "description": "Upd User's activity hours",
+            "example": 3
           }
         },
         "example": {
@@ -766,7 +798,9 @@
           "email": "john123@example.com",
           "gender": "Man",
           "avatarURL": "http://res.cloudinary.com/ddbqgch8e/image/upload/v1713198540/avatars/azjfryjytat5cpdh9ix5.webp",
-          "dailyWaterNorm": 3000
+          "dailyWaterNorm": 3000,
+          "weight": "70",
+          "sportTime": "3"
         }
       },
       "PortionsRequest": {
@@ -804,7 +838,7 @@
           },
           "properties": {
             "waterEntries": {
-              "type": "object",
+              "type": "array",
               "description": "User's new water portion"
             },
             "items": {
@@ -875,7 +909,7 @@
           },
           "properties": {
             "waterEntries": {
-              "type": "object",
+              "type": "array",
               "description": "User's upd water portion"
             },
             "items": {
@@ -927,7 +961,7 @@
           },
           "properties": {
             "waterEntries": {
-              "type": "object",
+              "type": "array",
               "description": "User's water portion which was deleted"
             },
             "items": {
